# nutek

./: Cargo.toml  README.md  trash.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  upload_asset.sh
src/: main.rs
