[package]
name = "nutek"
version = "1.0.0"
edition = "2024"
authors = ["Szymon Błaszczyński <neosb@nuteksecurity.com>"]
description = "The only h@xor tool you will ever need 🥷."
license = "MIT OR Apache-2.0"
keywords = ["security", "docker", "hacking", "recon", "pentesting"]
categories = ["games"]

[dependencies]
