[package]
name = "nutek"
version = "1.0.7"
edition = "2024"
authors = ["Szymon Błaszczyński <neosb@nuteksecurity.com>"]
description = "The only h@xor tool you will ever need 🥷."
license = "MIT OR Apache-2.0"
keywords = ["security", "hacking", "recon", "pentesting"]
categories = ["games"]
repository = "https://github.com/NutekSecurity/nutek"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
